Fixing layout issue of date and time page

--- a/css-&-scss/style.scss
+++ b/css-&-scss/style.scss
@@ -415,13 +415,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-grow: 1;
+    // flex-grow: 1;
     gap: 4px;
     width: 100%;
     .dnt-forum {
         display: flex;
         justify-content: center;
-        flex-grow: 1;
+        // flex-grow: 1;
         gap: 16px;
         width: 100%;
     }
